--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
+.spacer {
+  height: 64px;
+  width: 100%;
+  clear: left;
+}
 .task__section {
   clear: left;
   padding-top: 32px;
 }
 .grouping {
-    margin: 8px 16px;
+    margin: 8px 16px 16px 16px;
     float: left;
     width: 30%;
 }
